--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
 
                 <div>
-                    <img src="Images/work3.jpg" class="skills_img" alt="">
+                    <img src="work3.jpg" class="skills_img" alt="">
                 </div>
             </div>
         </section>
