--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="home bg-grid" id="home">
             <div class="home_data">
                 <h1 class="home_title">Olá,<br>eu sou <span class="home_title-color">Pedro Augusto</span><br>Web Designer</h1>
-                <a href="#" class="button">Informações de contato</a>
+                <a href="mailto:pa405369@gmail.com" class="button">Mande um e-mail</a>
             </div>
             <div class="home_social">
                 <a href="https://www.linkedin.com/in/pedro-augusto-cabral-oliveira-176131229/" class="home_social-icon"><i class="bx bxl-linkedin"></i></a>
@@ -56,8 +56,8 @@
                     <img src="Images/about.jpg" alt="">
                 </div>
                 <div>
-                    <h2 class="about_subtitle">Meu nome é Pedro</h2>
-                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus cumque alias laboriosam, harum odit iusto deleniti iure, similique velit maxime reprehenderit expedita adipisci numquam sit doloribus repellat quos dicta et.</p>
+                    <h2 class="about_subtitle">Sobre mim</h2>
+                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no mo momento eu tenho 18 anos, nasci em Uberlândia MG, eu já completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é se tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
                 </div>
             </div>
         </section>
@@ -68,7 +68,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skils_subtitle">Habilidades Profissionais</h2>
-                    <p class="skills_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam in dolorum ducimus! Blanditiis eum corporis voluptate qui nisi, omnis hic obcaecati, reiciendis repellendus atque non suscipit magnam quibusdam odit enim.</p>
+                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho mais de 80 certificados na plataforma DIO</p>
                     <div class="skills_data">
                         <div class="skills_name">
                             <i class="bx bxl-html5 skills_icon"></i>
@@ -101,10 +101,18 @@
                         <div class="skills_bar skills_ux"></div>
                         <div class="skills_percentage">95%</div>
                     </div>
+                    <div class="skills_data">
+                        <div class="skills_name">
+                            <i class='bx bxs-graduation' style='color:#4070f4' ></i>
+                            <span class="skills_name">Inglês</span>
+                        </div>
+                        <div class="skills_bar skills_en"></div>
+                        <div class="skills_percentage">Avançado</div>
+                    </div>
                 </div>
 
                 <div>
-                    <img src="work3.jpg" class="skills_img" alt="">
+                    <img src="Images/work3.jpg" class="skills_img" alt="">
                 </div>
             </div>
         </section>
