--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skils_subtitle">Habilidades Profissionais</h2>
-                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho mais de 80 certificados na plataforma DIO</p>
+                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei em front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho mais de 80 certificados na plataforma DIO</p>
                     <div class="skills_data">
                         <div class="skills_name">
                             <i class="bx bxl-html5 skills_icon"></i>
