--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="Website Icon"  type="png" href="images/portfolio.png">
     <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +22,7 @@
                     <li class="nav_item"><a href="#home" class="nav_link active">Ínico</a></li>
                     <li class="nav_item"><a href="#about" class="nav_link">Sobre</a></li>
                     <li class="nav_item"><a href="#skills" class="nav_link">Habilidades</a></li>
-                    <li class="nav_item"><a href="#work" class="nav_link">Trabalho</a></li>
+                    <li class="nav_item"><a href="#work" class="nav_link">Trabalhos</a></li>
                     <li class="nav_item"><a href="#contact" class="nav_link">Entre em contato</a></li>
                 </ul>
             </div>
@@ -35,7 +36,7 @@
         <!--==================== Home ===================-->
         <section class="home bg-grid" id="home">
             <div class="home_data">
-                <h1 class="home_title">Olá,<br>eu sou <span class="home_title-color">Pedro Augusto</span><br>Web Designer</h1>
+                <h1 class="home_title">Olá,<br>eu sou <span class="home_title-color">Pedro Augusto</span><br>e este é meu portfolio</h1>
                 <a href="mailto:pa405369@gmail.com" class="button">Mande um e-mail</a>
             </div>
             <div class="home_social">
@@ -53,11 +54,11 @@
 
             <div class="about_container bg-grid">
                 <div class="about_img">
-                    <img src="Images/about.jpg" alt="">
+                    <img src="Images/about.JPG" alt="">
                 </div>
                 <div>
                     <h2 class="about_subtitle">Sobre mim</h2>
-                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no mo momento eu tenho 18 anos, nasci em Uberlândia MG, eu já completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é se tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
+                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no mo momento eu tenho 18 anos, nasci em Uberlândia MG, completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é me tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
                 </div>
             </div>
         </section>
@@ -68,7 +69,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skils_subtitle">Habilidades Profissionais</h2>
-                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei em front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho mais de 80 certificados na plataforma DIO</p>
+                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho 99+ certificados </p>
                     <div class="skills_data">
                         <div class="skills_name">
                             <i class="bx bxl-html5 skills_icon"></i>
@@ -103,7 +104,7 @@
                     </div>
                     <div class="skills_data">
                         <div class="skills_name">
-                            <i class='bx bxs-graduation' style='color:#4070f4' ></i>
+                            <i class='bx bxs-book' style='color:#4070f4' ></i>
                             <span class="skills_name">Inglês</span>
                         </div>
                         <div class="skills_bar skills_en"></div>
@@ -119,7 +120,7 @@
 
         <!--============ Work =============-->
         <section class="work section" id="work">
-            <h2 class="section_title">Trabalho</h2>
+            <h2 class="section_title">Trabalhos</h2>
 
             <div class="work_container bg-grid">
                 <div class="work_img">
@@ -152,8 +153,8 @@
                     <input type="text" placeholder="Name" class="contact_input">
                     <input type="email" placeholder="Email" class="contact_input">
                     <textarea name="" id="" cols="30" rows="10" class="contact_input"></textarea>
-                    <input type="button" value="Submit" class="contact_button button">
-                </form>
+                    <button id="myButton">Enviar</button>
+                </form> 
             </div>
         </section>
 
