--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://github.com/PedroAugusto2004" class="home_social-icon"><i class="bx bxl-github"></i></a>
             </div>
             <div class="home_img">
-                <img src="Images/perfil.jpg" alt="">
+                <img src="Images/teste.png" alt="">
             </div>
         </section>
         <!--================= About ==================-->
