--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="Website Icon"  type="png" href="Images/portfolio.png">
+    <link rel="Website Icon"  type="png" href="images/portfolio.png">
     <link href='https://unpkg.com/boxicons@2.0.8/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <h2 class="about_subtitle">Sobre mim</h2>
-                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no mo momento eu tenho 18 anos, nasci em Uberlândia MG, completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é me tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
+                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no momento eu tenho 18 anos, nasci em Uberlândia MG, completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é me tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skils_subtitle">Habilidades Profissionais</h2>
-                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho 99+ certificados </p>
+                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu participei do Hackaton onde eu exerci o cargo como profissional de TI trabalhei e ajudei a desenvolver um programa que soluciona um problema muito comum entre os advogados utilizando jurimetria, sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho 99+ certificados </p>
                     <div class="skills_data">
                         <div class="skills_name">
                             <i class="bx bxl-html5 skills_icon"></i>
@@ -113,7 +113,7 @@
                 </div>
 
                 <div>
-                    <img src="Images/work3.jpg" class="skills_img" alt="">
+                    <img src="Images/work.JPG" class="skills_img" alt="">
                 </div>
             </div>
         </section>
@@ -162,8 +162,8 @@
         <footer class="footer">
             <p class="footer_title">Pedro Augusto</p>
             <div class="footer_social">
-                <a href="#" class="footer_icon"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="footer_icon"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100017986698425" class="footer_icon"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/pedro_augusto.__/" class="footer_icon"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="footer_icon"><i class="bx bxl-twitter"></i></a>
             </div>
             <p>&copy; 2023 copyright all rights reserved</p>
