--- a/index.html
+++ b/index.html
@@ -111,11 +111,16 @@
                         <div class="skills_percentage">Avançado</div>
                     </div>
                 </div>
-
                 <div>
                     <img src="Images/work.JPG" class="skills_img" alt="">
                 </div>
+                <a href="https://www.dio.me/users/pa405369">
+                    <button><span>Meu perfil DIO</span></button>
+                </a>
+
             </div>
+            
+
         </section>
 
         <!--============ Work =============-->
@@ -153,7 +158,7 @@
                     <input type="text" placeholder="Name" class="contact_input">
                     <input type="email" placeholder="Email" class="contact_input">
                     <textarea name="" id="" cols="30" rows="10" class="contact_input"></textarea>
-                    <button id="myButton">Enviar</button>
+                    <button2 id="myButton">Enviar</button2>
                 </form> 
             </div>
         </section>
