--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="nav_item"><a href="#home" class="nav_link active">Ínico</a></li>
                     <li class="nav_item"><a href="#about" class="nav_link">Sobre</a></li>
                     <li class="nav_item"><a href="#skills" class="nav_link">Habilidades</a></li>
-                    <li class="nav_item"><a href="#work" class="nav_link">Trabalhos</a></li>
+                    <li class="nav_item"><a href="#work" class="nav_link">Meus Projetos</a></li>
                     <li class="nav_item"><a href="#contact" class="nav_link">Entre em contato</a></li>
                 </ul>
             </div>
@@ -125,20 +125,24 @@
 
         <!--============ Work =============-->
         <section class="work section" id="work">
-            <h2 class="section_title">Trabalhos</h2>
+            <h2 class="section_title">Meus Projetos</h2>
 
             <div class="work_container bg-grid">
                 <div class="work_img">
-                    <img src="Images/work1.jpg" alt="">
+                    <a href="https://pedroaugusto2004.github.io/Spotify-Clone/">
+                    <img src="Images/spotify.PNG" alt=""></a>    
                 </div>
                 <div class="work_img">
-                    <img src="Images/work2.jpg" alt="">
+                    <a href="https://pedroaugusto2004.github.io/Clone-Netflix/">
+                        <img src="Images/netflix.PNG" alt=""></a>  
                 </div>
                 <div class="work_img">
-                    <img src="Images/work3.jpg" alt="">
+                    <a href=" https://pedroaugusto2004.github.io/FB-Jogo/">
+                        <img src="Images/flappybird.PNG" alt=""></a>
                 </div>
                 <div class="work_img">
-                    <img src="Images/work4.jpg" alt="">
+                   <a href="https://pedroaugusto2004.github.io/dinamic-island_Iphone14/">
+                    <img src="Images/dinamicisland.PNG" alt=""></a>
                 </div>
                 <div class="work_img">
                     <img src="Images/work5.jpg" alt="">
