--- a/index.html
+++ b/index.html
@@ -130,25 +130,33 @@
             <div class="work_container bg-grid">
                 <div class="work_img">
                     <a href="https://pedroaugusto2004.github.io/Spotify-Clone/">
-                    <img src="Images/spotify.PNG" alt=""></a>    
+                    <img src="Images/spotify.PNG" alt=""></a>
+                   <h3>Interface do Spotify</h3> 
                 </div>
                 <div class="work_img">
                     <a href="https://pedroaugusto2004.github.io/Clone-Netflix/">
-                        <img src="Images/netflix.PNG" alt=""></a>  
+                        <img src="Images/netflix.PNG" alt=""></a> 
+                        <h3>Interface do Netflix</h3>
                 </div>
                 <div class="work_img">
                     <a href=" https://pedroaugusto2004.github.io/FB-Jogo/">
                         <img src="Images/flappybird.PNG" alt=""></a>
+                        <h3>Recriação do FlappyBird</h3>
                 </div>
                 <div class="work_img">
-                   <a href="https://pedroaugusto2004.github.io/dinamic-island_Iphone14/">
+                   <a href="https://pedroaugusto2004.github.io/Calaculadora-iphone/">
+                    <img src="Images/calculadora.PNG" alt=""></a>
+                    <h3>Calculadora do Iphone</h3>
+                </div>
+                <div class="work_img">
+                   <a href="https://pedroaugusto2004.github.io/Previsao-do-tempo-JavaScript/"> 
+                    <img src="Images/previsão.PNG" alt=""></a>
+                    <h3>Previsão do Tempo</h3>
+                </div>
+                <div class="work_img">
+                   <a href="https://pedroaugusto2004.github.io/dinamic-island_Iphone14/"> 
                     <img src="Images/dinamicisland.PNG" alt=""></a>
-                </div>
-                <div class="work_img">
-                    <img src="Images/work5.jpg" alt="">
-                </div>
-                <div class="work_img">
-                    <img src="Images/work6.jpg" alt="">
+                    <h3>Dinamic island Iphone 14</h3>
                 </div>
             </div>
         </section>
