--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <h2 class="about_subtitle">Sobre mim</h2>
-                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no momento eu tenho 18 anos, nasci em Uberlândia MG, completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é me tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, o que eu mais gosto em mim é que eu faço o que o tem que ser feito independente a situação.</p>
+                    <p class="about_text">Meu Nome é Pedro Augusto Cabral Oliveira, no momento eu tenho 18 anos, nasci em Uberlândia MG, completei o Ensino médio e no momento estou cursando ciências da computação, faço cursos na plataforma DIO, crio e desenvolvo projetos, eu estou sempre a procura de fazer o meu melhor e evoluir a cada dia, sou uma pessoa amigavel, extrovertido com quem eu tenho amizade, procuro sempre estar informado e atento ao que está acontecendo, minha meta é me tornar independente financeiramente e no futuro subir de cargo e poder criar meu próprio negócio, sou uma pessoa dedicada, se eu começo algo eu sempre termino.</p>
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skils_subtitle">Habilidades Profissionais</h2>
-                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, eu também já trabalhei com back-end utilizando a linguagem de programação python, eu participei do Hackaton onde eu exerci o cargo como profissional de TI trabalhei e ajudei a desenvolver um programa que soluciona um problema muito comum entre os advogados utilizando jurimetria, sou muito bom com comunicação, já realizei varias vendas, utilizando apenas o diálogo e uma boa apresentação, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos, tenho 99+ certificados </p>
+                    <p class="skills_text">Eu tenho um conhecimento amplo em programação, me especializei front-end, espeficicamente na linguagem de programação JavaScript e nas linguagens de marcação HTML e css, trabalho com back-end utilizando JavaScript e Python, participei do Hackaton onde eu exerci o cargo como profissional de TI trabalhei e ajudei a desenvolver um programa que soluciona um problema muito comum entre os advogados utilizando jurimetria. Falo muito bem em público, eu sempre estou na liderança quando se envolve trabalhos e projetos em grupos.</p>
                     <div class="skills_data">
                         <div class="skills_name">
                             <i class="bx bxl-html5 skills_icon"></i>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="skills_data">
                         <div class="skills_name">
-                            <i class='bx bxs-book' style='color:#4070f4' ></i>
+                            <i class='bx bxs-book skills_icon' style='color:#4070f4' ></i>
                             <span class="skills_name">Inglês</span>
                         </div>
                         <div class="skills_bar skills_en"></div>
