--- a/index.html
+++ b/index.html
@@ -132,31 +132,37 @@
                     <a href="https://pedroaugusto2004.github.io/Spotify-Clone/">
                     <img src="Images/spotify.PNG" alt=""></a>
                    <h3>Interface do Spotify</h3> 
+                   <a href="https://github.com/PedroAugusto2004/Spotify-Clone"><p>Acesse aqui o repositório</p></a>
                 </div>
                 <div class="work_img">
                     <a href="https://pedroaugusto2004.github.io/Clone-Netflix/">
                         <img src="Images/netflix.PNG" alt=""></a> 
                         <h3>Interface do Netflix</h3>
+                        <a href="https://github.com/PedroAugusto2004/Clone-Netflix"><p>Acesse aqui o repositório</p></a>
                 </div>
                 <div class="work_img">
                     <a href=" https://pedroaugusto2004.github.io/FB-Jogo/">
                         <img src="Images/flappybird.PNG" alt=""></a>
                         <h3>Recriação do FlappyBird</h3>
+                        <a href="https://github.com/PedroAugusto2004/FB-Jogo"><p>Acesse aqui o repositório</p></a>
                 </div>
                 <div class="work_img">
                    <a href="https://pedroaugusto2004.github.io/Calaculadora-iphone/">
                     <img src="Images/calculadora.PNG" alt=""></a>
                     <h3>Calculadora do Iphone</h3>
+                    <a href="https://github.com/PedroAugusto2004/Calaculadora-iphone"><p>Acesse aqui o repositório</p></a>
                 </div>
                 <div class="work_img">
                    <a href="https://pedroaugusto2004.github.io/Previsao-do-tempo-JavaScript/"> 
                     <img src="Images/previsão.PNG" alt=""></a>
                     <h3>Previsão do Tempo</h3>
+                    <a href="https://github.com/PedroAugusto2004/Previsao-do-tempo-JavaScript"><p>Acesse aqui o repositório</p></a>
                 </div>
                 <div class="work_img">
                    <a href="https://pedroaugusto2004.github.io/dinamic-island_Iphone14/"> 
                     <img src="Images/dinamicisland.PNG" alt=""></a>
                     <h3>Dinamic island Iphone 14</h3>
+                    <a href="https://github.com/PedroAugusto2004/dinamic-island_Iphone14"><p>Acesse aqui o repositório</p></a>
                 </div>
             </div>
         </section>
